force-app/main/default/objects/SFGA__Search_Phrase__c/SFGA__Search_Phrase__c.object-meta.xml
<CustomObject>
    <description>Search Phrases are the search terms or phrases the user types into a search box</description>
    <label>Search Phrase</label>
    <nameField>
        <label>Search Phrase</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Phrases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>