force-app/main/default/objects/SFGA__Search_Phrase__c/fields/SFGA__Lead__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>R00N40000001HghFEAS</relationshipName>
    <type>Lookup</type>
</CustomField>