force-app/main/default/objects/SFGA__Search_Phrase__c/fields/SFGA__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>R00N40000001HghEEAS</relationshipName>
    <type>Lookup</type>
</CustomField>