force-app/main/default/objects/SFGA__Search_Phrase__c/fields/SFGA__Search_Phrase_ID__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Search_Phrase_ID__c</fullName>
    <description>Unique Identifier of the Search Phrase</description>
    <label>Search Phrase ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>